project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  selector:
    app: project
  ports:
  - port: 30081
    protocol: TCP
    targetPort: 3001
